# Trifocal_Pose_Estimation_using_Improved_GPUHC

./: CMakeLists.txt  README.md
Output_Write_Files/: CPU_Sols_Statistics.txt  GPU_Sols_Statistics.txt  GPU_Timings.txt
RANSAC_trifocal_relative_pose/: CMakeLists.txt
RANSAC_trifocal_relative_pose/cmd/: CMakeLists.txt  ransac_trifocal_relative_pose_solver.cpp
RANSAC_trifocal_relative_pose/ransac_trifocal_relative_pose_solver/: CMakeLists.txt  Files_for_TEST.cpp  Files_for_TEST.hpp  HC_Track_Chicago_Problem.cpp  HC_data_reader.cpp  HC_data_reader.hpp  Problem_Params.hpp  RANSAC_System.cpp  RANSAC_System.hpp  RANSAC_System_MB.cpp  RANSAC_System_MB.hpp  Views.cpp  Views.h  Views.hpp  define_params.cpp  definitions.h  util.cpp  util.hpp
RANSAC_trifocal_relative_pose/ransac_trifocal_relative_pose_solver/gpu_solver/gpu-dev-functions/: dev-eval-indxing-trifocal_2op1p_30.cuh  dev-eval-indxing-trifocal_2op1p_30_direct_param_homotopy.cuh
RANSAC_trifocal_relative_pose/ransac_trifocal_relative_pose_solver/gpu_solver/gpu-kernels/: kernel_HC_Solver_trifocal_2op1p_direct_param_homotopy.cu  kernel_HC_Solver_trifocal_2op1p_direct_param_homotopy_cycle_timing.cu  kernel_HC_Solver_trifocal_2op1p_direct_param_homotopy_mb.cu  magmaHC-kernels.h
RANSAC_trifocal_relative_pose/ransac_trifocal_relative_pose_solver/gpu_solver/polys_params2coeffs/: p2c_trifocal_2op1p_30.h
arxived_GPU_code/: README_arxived_GPU_code.md
auto-GPUHC-data-generator/: julia-start-sols-raw  param2coeffs.m  reformatStartSolsFromJulia.m  start-sols.txt  sys_trifocal_2op1p_30.m  trifocal_2op1p_30x30_monodromySolve.jl
cmd/: magmaHC-main.cpp
magmaHC/: CMakeLists.txt  CPU_HC_Solver.cpp  Data_Reader.cpp  Data_Reader.hpp  GPU_HC_Solver.cpp  GPU_HC_Solver.hpp
magmaHC/gpu-kernels/: magmaHC-kernels.hpp
problems/trifocal_2op1p_30x30/: gpuhc_settings.yaml
